--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "atob": "^2.1.2",
     "axios": "^0.21.1",
     "cross-blob": "^3.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "mime-file-extension": "^2.0.6",
